[FIX] Better menu buttons on mobile

--- a/collectives/static/css/legacy/administration.scss
+++ b/collectives/static/css/legacy/administration.scss
@@ -3,12 +3,6 @@
   margin: auto;
 }
 
-#administration .action{
-  max-width: 800px;
-  margin: auto;
-  text-align: center;
-}
-
 #administration .controls{
   display: flex;
   align-items: center;
